--- a/public/main.css
+++ b/public/main.css
@@ -5,128 +5,194 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background: #e5e5e5
+    background-color: #f4f0f0
 }
 
-.frame .main_frame {
-  width: 1440px;
-  height: 1312px; 
-  align-items: center;
-  position:relative;
-  display: flex;
-  margin-top: 2px;
-  flex-direction: row;
-  background: #f7f6b9;
+.main_frame {
+    position:relative;
+    width: 1440px;
+    height: 1312px; 
+    align-items: center;
+
+    display: flex;
+    margin-top: 2px;
+    flex-direction: row;
+    background:#f0f0f6;
 }
 
 .main_frame .left_frame {
-  position: relative;
-  width: 305px;
-  height: 1315px;
-  background-color: white;
-  display: flex;
-  flex-direction:column;
+    position: relative;
+    width: 305px;
+    height: 1315px;
+    background-color:white;
+    display: flex;
+    flex-direction:column;
 }
 
 .main_frame .mid_frame {
-  position: relative;
-  width: 970px;
-  height: 1259px;
-  margin-left: 30px;
-  margin-right: 27px;
-  display: flex;
-  flex-direction: column;
-}
+    position: relative;
+    width: 970px;
+    height: 1259px;
+    margin-left: 30px;
+    margin-right: 27px;
+    display: flex;
+    flex-direction: column;
+    top: -27px;
+    }
 
 .main_frame .right_frame {
-  width: 108px;
-  height: 1315px; 
-  position: relative;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    width: 108px;
+    height: 1315px; 
+    position: relative;
+    background-color: #FAFAFA;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
-.main_frame .left_1 {
-  position: relative;
-  width: 228px;
-  height: 267px;
-  margin-left: 37px;
-  margin-top: 50px;
-  display: flex; 
-  flex-direction: column;
-  justify-content:center;
-  align-items: center;  
+.main_frame .left_frame .left_1 {
+    position: relative;
+    width: 228px;
+    height: 267px;
+    margin-left: 40px;
+    margin-top: 40px;
+    display: flex; 
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;  
 }
 
- .main_frame .left_1 .left_1_1 {
-  display:flex;
-  flex-direction:column;
-  position:relative;
-  width: 156.16px;
-  height: 142.53px;
-  margin-bottom:29.46px;
+ .main_frame .left_frame .left_1 .left_1_1 {
+    display:flex;
+    flex-direction:column;
+    position:relative;
+    width: 156.16px;
+    height: 142.53px;
+    margin-bottom:29.46px;
 }
+.main_frame .left_frame .left_1 .left_1_2 h1 {
+    position:relative;
+    width:66.64px;
+    height: 20.9px;
+    margin-bottom:6.65px;
+    font-family:sans-serif;
+    font-style:normal;
+    font-weight:500;
+    font-size: 18px;
+    line-height:123.6;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-transform:capitalize;
+    color:#2b2b2b;
+}
+
+.main_frame .left_frame .left_1 .left_1-3 p{
+    position: relative;
+    width: 147.84px;
+    height: 25.65px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+    font-feature-settings: "calt" off, "kern" off;
+    color: #767676;
+}
+
+.left-icons  {
+    width: 228px;
+    height: 22.8px;
+    margin-top: 12px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    flex-direction: row;
+}
+
+.link_href {
+    text-decoration: none;
+    color: black;
+}
+
+/*.icon {
+    position: relative;
+    width: 24.99px;
+    height: 22.8px;
+    border-radius: 50%;
+    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+    background: #ffb400;
+}*/
 
 .main_frame .marginer {
-  position: relative;    
-  width: 220px;
-  height: 0;
-  margin-left:40px;
-  margin-bottom:25px; 
-  margin-top:39px;
-  
-  /* Background */
-  border: 1.5px solid #f0f0f6;
+    position: relative;    
+    width: 220px;
+    height: 0;
+    margin-left:40px;
+    margin-bottom:25px; 
+    margin-top:30px;
+
+    /* Background */
+    border: 1.5px solid #f0f0f6;
+    }
+
+.main_frame .left_frame .left_2 {
+    position: relative;    
+    width: 221px;
+    height: 126px;
+    margin-left:40px;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+    display:flex;
 }
 
-.main_frame .left_2 {
-  position: relative;    
-  width: 221px;
-  height: 126px;
-  margin-left:44px;
-}
+
 
 .left_2-1 {
-position:relative;
-width: 66.63px;
-height: 20.85px;
-margin-bottom:6.65px;
-font-weight:500;
-font-size:18px;
-line-height:123.6%;
-display: flex;
-font-family:sans-serif;
-flex-direction: row;
-align-items: center;
-text-transform:capitalize;
-color:#2b2b2b;
+    position:relative;
+    width: 66.63px;
+    height: 20.85px;
+    margin-bottom:6.65px;
+    font-weight:500;
+    font-size:18px;
+    line-height:123.6%;
+    display: flex;
+    font-family:sans-serif;
+    flex-direction: row;
+    align-items: center;
+    text-transform:capitalize;
+    color:#2b2b2b;
 }
 
 .main_frame .left_frame .left_3 {
-  position: relative;    
-  width: 221px;
-  height: 153px;
-  margin-top:25px;
-  margin-left:45px;
+    position: relative;    
+    width: 221px;
+    height: 153px;
+    margin-top:25px;
+    margin-left:45px;
 }
 .main_frame .left_frame .left_1_3 {
-position: relative;    
-width: 147.84px;
-height: 24.31px;
-display: flex;
-justify-content:center;
-align-items:center;
-font-style:normal;
-font-family:sans-serif;
-font-weight:normal;
-font-size:15px;
-line-height: 24px;
-text-align: left;
-text-transform: capitalize;
-font-feature-settings:"calt" off, 'kern' off;
-color:#767676;
+    position: relative;    
+    width: 147.84px;
+    height: 24.31px;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-style:normal;
+    font-family:sans-serif;
+    font-weight:normal;
+    font-size:15px;
+    line-height: 24px;
+    text-align: left;
+    text-transform: capitalize;
+    font-feature-settings:"calt" off, 'kern' off;
+    color:#767676;
 }
 
 .left-icons {
@@ -136,8 +202,7 @@ color:#767676;
     flex-direction: row;
     width:238px;
     margin-top:19px;
-    justify-content: space-between;
-    
+    justify-content: space-between; 
 }
 
 .link_href {
@@ -150,7 +215,7 @@ color:#767676;
     width:24.99px;
     height:22.8px;
     border-radius: 50%;
-    background: #ffb400;
+    background:#FAFAFA ;
     filter:drop-shadow(0 4px 4px rgba(0,0,0,0.25));
 }
 
@@ -187,7 +252,7 @@ color:#767676;
     margin-bottom: 5px;
 }
 
-.main_frame .left_frame .left_2 .left_2-1 .left_2-1-tit{
+.main_frame .left_frame .left_2 .left_2-1 .left_2-1-tit p{
     background: #ffb400;
     width: 46.21px;
     height: 24px;
@@ -196,7 +261,7 @@ color:#767676;
 }
 
 .main_frame .left_frame .left_2 .left_2-1 .left_2-1-tit p {
-    background: #ff005d;
+    background:#ffb400;
     height: 24px;
     width: 120%;
     font-family: sans-serif;
@@ -238,6 +303,13 @@ color:#767676;
     margin-bottom: 5px;
 }
 
+.main_frame .left_frame .left_3 .left_3-1 .left_3-1-title h1{
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.7px;
+    
+}
 .main_frame .left_frame .left_3 .left_3-1 .left_3-1-title h1{
     font-family: sans-serif;
     font-size: 16px;
@@ -295,28 +367,43 @@ color:#767676;
     padding-bottom: 2px;   
 }
 
-
 .main_frame .left_frame .left_4 {
     position: relative;
     width: 220px;
     height: 242px;
     margin-top: 10px;
     margin-left: 40px;
-     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex; 
+    
+     
 }
 
-.main_frame.left_frame .left_4 .left_4-1 {
-    margin-bottom:5px;
+.main_frame .left_frame .left_4 .left_4-1  {
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-items: center;
     margin-top:5px;
     height: 18px;
     width:221px;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction:row;
+    margin-bottom:5px;
+   
+}
+.left_4-1-skills {
     display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top:5px;
+    height: 18px;
+    width:221px;
+    margin-bottom:5px; 
+}
+
+.main_frame .left_frame .left_4 .left_4-1 .left_4-1-title h1{
+    font-family:sans-serif;
+    font-size: 18px;
+    font-weight:400;
+    letter-spacing:0.7px;
 }
 
 .main_frame .left_frame .left_4 .left_4-1 .left_4-1-skills  p{
@@ -325,12 +412,6 @@ color:#767676;
     color: #767676;
     line-height: 24px;
     letter-spacing: 0.7px;
-}
-.main_frame .left_frame .left_4 .left_4-1 .left_4-1-title h1{
-    font-family:sans-serif;
-    font-size: 18px;
-    font-weight:400;
-    letter-spacing:0.7px;
 }
 
 .main_frame .left_frame .left_4 .left_4-1 .left_4-1-foiz p{
@@ -365,7 +446,6 @@ color:#767676;
     border: solid 0.1px #ffb400;
     padding-bottom: 2px;
 }
-
 .left_frame .left_4 .left_4-1 .left_4-1-line .left_4-1-lin-3{
     background: #ffb400;
     width: 187px;
@@ -375,7 +455,7 @@ color:#767676;
     padding-bottom: 2px;   
 }
 
-.left_frame .left_4 .left_4-1 .left_4-1-line .left_4-1-lin-4{
+.main_frame .left_frame .left_4 .left_4-1 .left_4-1-line .left_4-1-lin-4{
     background: #ffb400;
     width: 187px;
     height: 2px;
@@ -384,7 +464,7 @@ color:#767676;
     padding-bottom: 2px;   
 }
 
-.left_frame .left_4 .left_4-1 .left_4-1-line .left_4-1-lin-5{
+.main_frame .left_frame .left_4 .left_4-1 .left_4-1-line .left_4-1-lin-5{
     background: #ffb400;
     width: 187px;
     height: 2px;
@@ -393,20 +473,11 @@ color:#767676;
     padding-bottom: 2px;   
 }
 .main_frame .left_frame .left_5 {
-  position: relative;    
-  width: 186px;
-  height: 148px;
-  margin-top:25px;
-  margin-left:45px;
-  background-color: rgb(57, 172, 210);
-}
-
-.main_frame .left_frame .left_5 {
-    position: relative;
-    width: 186px ;
+    position: relative;    
+    width: 186px;
     height: 148px;
-    margin-left: 40px;
-    margin-top: 25px; 
+    margin-top:15px;
+    margin-left:40px;
 }
 
 .main_frame .left_frame .left_5 .left_5-1{
@@ -441,4 +512,229 @@ color:#767676;
 
 .main_frame .left_frame .left_5 .left_5-1 .left_5-1-icon {
 margin-right: 12px;
+}
+
+.main_frame .left_frame .left_5 .left_5-1 .left_5-1-icon {
+    margin-right: 12px;
+}
+.main_frame .left_frame .left_1 .left_1-1 {
+    width: 156px;
+    height:142px;
+}
+
+.main_frame .left_frame .left_5 .left_5-1 .hire-btn {
+    height: 40px;
+    width: 220px;
+    color:#ffb400
+}
+.hire-btn {
+    height: 40px;
+    width: 220px;
+    color:#767676;
+    background-color:#ffb400;
+    margin-left:40px;
+}
+
+/* middle frame quramiz */
+
+.midd_frame { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative; 
+}
+
+.midd_frame_top{  
+    width: 970px;
+    position: absolute;
+    height: 467px;
+    background: #FAFAFA 
+   
+}
+
+.midd_frame_top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.midd_frame_top_left {
+    margin-left: 50px;
+}
+
+.midd_frame_top_left_title {
+    width: 500px;
+    height: 118px;
+  
+}
+
+.midd_frame_top_left_title h1{
+    font-family: sans-serif;
+    font-size: 48px;
+    letter-spacing: 1px;
+}
+
+.midd_frame_top_left_descb{
+    width: 424px;
+    height: 88px;
+}
+
+.midd_frame_top_left_descb p{
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    color: #767676;
+}
+
+.frame_top_left_button{
+    width: 154px;
+    height: 51px;
+    background:#ffb400 ;
+    font-family: sans-serif;
+    border: none;
+    border-radius: 6px;
+}
+.midd_frame_top_right{
+    width: 325.72px;
+    height: 459.09px;
+    margin-right: 20px;
+
+}
+
+.midd_frame_icons{
+    position: absolute;
+    z-index: 1;
+}
+.midd_frame_icons .midd_frame_icon-1{
+    position: relative;
+    left:710px;
+    bottom:110;
+}
+ .midd_frame_icons .midd_frame_icon-2{
+    position: relative;
+    top: 55px;
+    left: 110px;
+}
+.midd_frame_icons .midd_frame_icon-3{
+    position: relative;
+    left: 450px;
+    top: 345px;
+}
+.midd_frame_icons .midd_frame_icon-4{
+    position: relative;
+    left: 410px;
+    top:40px
+}
+.midd_frame_icons .midd_frame_icon-5{
+    position: relative;
+    right: 140px;
+    top: 350px;
+}
+.midd_frame_icons .midd_frame_icon-6{
+    position: relative;
+    top: 399px;
+    left: 70px;
+}
+.midd_frame_top .midd_frame_icons .midd_frame_icon-7{
+    position: relative;
+    top: 420px;
+    left: 410px;
+}
+.midd_frame_top_right_img {
+    height:460px;
+    width:324;
+}
+
+.midd_frame_bottom{
+    width: 970px;
+    height: 653px;   
+    position: absolute;
+    top: 606px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;    
+}
+
+.midd_frame_bottom-1{
+ align-items: center;
+ align-content: center;
+ text-align: center;
+}
+
+.midd_frame_bottom-1 .midd_frame_bottom-1_tittle h1{
+    font-size: 32px;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    font-weight: 600;  
+} 
+
+.midd_frame_bottom-1_descrb {
+    width: 428px;
+    height: 68px;
+}
+.midd_frame_bottom-1  .midd_frame_bottom-1_descrb p{
+    font-size: 15px;
+    font-family: sans-serif;
+    line-height: 24px;
+    color: #767676;
+}
+
+
+.midd_frame_bottom-2{
+     width: 970px;
+     height: 606px;
+}
+
+.midd_frame_bottom_items{
+    display: grid;
+    grid-template-columns:repeat(3,1fr) ;  
+    gap: 2rem;
+    margin: 2rem 0;  
+}
+
+.midd_frame_bottom_item{
+    align-items: center;
+    text-align: center;
+    width: 297px;
+    height: 218px;
+    background: #FAFAFA;
+}
+.midd_frame_bottom_item-icon{
+    padding-top: 20px;  
+}
+
+.midd_frame_bottom_tittle h1{
+    font-family: sans-serif;
+    font-size: 18px;
+    color: #2b2b2b;
+    font-weight: 500;
+}
+
+.midd_frame_bottom_descrb p{
+    font-family: sans-serif;
+    font-size: 15px;
+    color:#767676;
+    padding: 0 20px;
+    margin-top:20px;
+
+}
+.midd_frame_bottom_order_descrb p{
+color:#ffb400;
+}
+.order_descrb{
+    text-decoration: none ;
+}
+/*.right_frame{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;   
+}*/
+
+.right_frame  {
+    width: 103px;
+    height: 1315px;
+   
 }
