--- a/views/author.ejs
+++ b/views/author.ejs
@@ -31,32 +31,32 @@
               <div class="left-icons">
                 <a class="link_href" href="">
                   <div class="icon">
-                      <img src="icon/Youtube.svg" class="icon-1" alt="">
+                      <img src="icon/Youtube.png" class="icon-1" alt="">
                   </div>
                </a>
                 <a class="link_href">
                   <div class="icon">
-                      <img src="icon/Instagram.svg" class="icon-1" alt="">
+                      <img src="icon/Instagram.png" class="icon-1" alt="">
                   </div>
                </a>
                 <a class="link_href">
                   <div class="icon">
-                      <img src="icon/Twitter.svg" class="icon-1" alt="">
+                      <img src="icon/Twitter.png" class="icon-1" alt="">
                   </div>
                </a>
                 <a class="link_href">
                   <div class="icon">
-                      <img src="icon/Linkedin.svg" class="icon-1" alt="">
+                      <img src="icon/Linkeding.png" class="icon-1" alt="">
                   </div>
                </a>
                 <a class="link_href">
                   <div class="icon">
-                      <img src="icon/Facebook.svg" class="icon-1" alt="">
+                      <img src="icon/Facebook.png" class="icon-1" alt="">
                   </div>
                </a>
                 <a class="link_href">
                   <div class="icon">
-                      <img src="icon/Dribbble.svg" class="icon-1" alt="">
+                      <img src="icon/Dribble.png" class="icon-1" alt="">
                   </div>
                 </a>
               </div>
@@ -75,7 +75,7 @@
              <div class="left_2-1-tit">
                 <p>Residence:</p>
              </div>
-            <div class="left_2-1_age"><p>UZB</p>
+            <div class="left_2-1_age"><p>S.Korea</p>
             </div>
           </div>
           <div class="left_2-1">
@@ -90,7 +90,7 @@
               <div class="left_2-1-tit">
                   <p>Address:</p>
               </div>
-              <div class="left_2-1-age"><p>Korea, Seoul</p>
+              <div class="left_2-1-age"><p>S.Korea, Busan</p>
               </div>
           </div>         
         </div>
@@ -139,7 +139,7 @@
                 <div class="left_3-1-line">
                   <div class="left_3-1-lin-3"> </div>
                 </div>
-            </div>
+            
         </div>
         </div>
           <div class="marginer"></div>
@@ -169,7 +169,7 @@
                   <p>CSS</p>
               </div>
               <div class="left_4-1-foiz">
-                  <p>85%</p>
+                  <p>80%</p>
               </div>
             </div>
             <div class="left_4-1">
@@ -204,10 +204,7 @@
               <div class="left_4-1-line">
                <div class="left_4-1-lin-4"></div>
                 </div>
-                <div class="left_4-1"></div>
                 </div>
-            </div>
-             
             <!--word-->
             <div class="left_4-1">
                 <div class="left_4-1-skills">
@@ -225,7 +222,6 @@
             </div>
           <div class="marginer"></div>
           <div class="left_5">
-            <div class="left_5">
                     <div class="left_5-1">
                         <div class="left_5-1-title">
                             <h1>Extra Skills</h1>
@@ -263,11 +259,125 @@
                             <p>GIT Knowledge</p>
                         </div>
                     </div>
-          </div>
+             </div>
           <div class="marginer"></div>
+          <button class="hire-btn">DOWNLOAD CV </button>
         </div>
-        <div class="mid_frame"> </div>
-        <div class="right_frame"> </div>
+        <div class="mid_frame">
+      <!--middle frame -->
+      <div class="midd_frame_icons">
+                    <img class="midd_frame_icon-1" src="images/Ellipse 15.svg" alt="">
+                    <img class="midd_frame_icon-2" src="imagesEllipse 16.svg" alt="">
+                    <img class="midd_frame_icon-3" src="images/Rectangle 51.png" alt="">
+                    <img class="midd_frame_icon-4" src="images/Ellipse 12.svg" alt=""> 
+                    <img class="midd_frame_icon-6" src="images/Ellipse 15.svg" alt="">
+                    <img class="midd_frame_icon-7" src="images/Polygon 1.svg" alt="">
+                </div>
+                <div class="midd_frame_top">
+                    <div class="midd_frame_top_left">
+                        <div class="midd_frame_top_left_title">
+                            <h3>Engineering<br> in LG ELECTRONICS</h3>
+                        </div>
+                        <div class="midd_frame_top_left_descb">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat dignissimos repudiandae perspiciatis natus quo voluptatum, impedit ipsa reiciendis facilis Lorem ipsumr </p>
+                        </div>
+                        <div class="midd_frame_top_left_button">
+                            <button class="frame_top_left_button">HIRE ME -></button>
+                        </div>
+                    </div>
+                    <div class="midd_frame_top_right">
+                      <div class="midd_frame_top_right_img">
+                        <img src="box_images/Your Image 1.png" alt="">
+                      </div> 
+                    </div>
+                </div>
+                <div class="midd_frame_bottom">
+                    <div class="midd_frame_bottom-1">
+                       <div class="midd_frame_bottom-1_tittle">
+                        <h1>My Services</h1>
+                       </div> 
+                       <div class="midd_frame_bottom-1_descrb">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, error est maxime fugiat fuga sequi, laborum vel nisi deserunt voluptatem, in ratione.</p>
+                       </div>
+                    </div>
+                    <class="midd_frame_bottom-2">
+                        <div class="midd_frame_bottom_items">
+                            <div class="midd_frame_bottom_item">
+                                <div class="midd_frame_bottom_item-icon">
+                                    <img src="icon/coding.png" alt="">
+                                </div>
+                                <div class="midd_frame_bottom_tittle">
+                                    <h1>Web Development</h1>
+                                </div>
+                                <div class="midd_frame_bottom_descrb">
+                                    <p>Blog, E-Commerce</p>
+                                </div>
+                            </div>
+                            <div class="midd_frame_bottom_item">
+                                <div class="midd_frame_bottom_item-icon">
+                                    <img src="icon/illustration.png" alt="">
+                                </div>
+                                <div class="midd_frame_bottom_tittle">
+                                    <h1>UI/UX Design</h1>
+                                </div>
+                                <div class="midd_frame_bottom_descrb">
+                                    <p>Mobile App, Website Design</p>
+                                </div>
+                            </div>
+                            <div class="midd_frame_bottom_item">
+                                <div class="midd_frame_bottom_item-icon">
+                                    <img src="icon/Microphone.png" alt="">
+                                </div>
+                                <div class="midd_frame_bottom_tittle">
+                                    <h1>Sound Design</h1>
+                                </div>
+                                <div class="midd_frame_bottom_descrb">
+                                    <p>Voice Over, Beat Making</p></div>
+                            </div>
+                            <div class="midd_frame_bottom_item">
+                                <div class="midd_frame_bottom_item-icon">
+                                    <img src="icon/game-development.png" alt="">
+                                </div>
+                                <div class="midd_frame_bottom_tittle">
+                                    <h1>Game Design</h1>
+                                </div>
+                                <div class="midd_frame_bottom_descrb">
+                                    <p>Character Design, Props & Objects</p>
+                                </div>
+                            </div>
+                            <div class="midd_frame_bottom_item">
+                                <div class="midd_frame_bottom_item-icon">
+                                    <img src="Icon/Photographer.svg" alt="">
+                                </div>
+                                <div class="midd_frame_bottom_tittle">
+                                    <h1>Photography</h1>
+                                </div>
+                                <div class="midd_frame_bottom_descrb">
+                                    <p>Portrait, Product Photography</p>
+                                </div>
+                            </div>
+                            <div class="midd_frame_bottom_item">                              
+                                <div class="midd_frame_bottom_tittle">
+                                    <h1>Adversiting</h1>
+                                </div>
+                                <div class="midd_frame_bottom_descrb">
+                                    <p>Lorem ipsul Dolor Sit, Consectetur elit. ipsul Dolor Sit, Consectetur elit. via consectorvitae nulla diam in AC dictum A urna Viverra morbi</p>
+                                </div>
+                                 <div class="midd_frame_bottom_order_descrb">
+                                    <a href="#" class="order_descrb"><p>ORDER NOW ></p></a>
+                                </div>
+                            </div>                                                     
+                        </div>
+                      </div>
+                </div>
+        </div>
+
+        <!--     right   frame.   -->
+        <div class="right_frame"> 
+          <div class="right_frame_top-icon">
+              <a href="#"><img src="icon/homebutton.png" alt=""></a>
+          </div>
+        </div>
     </div>
 </div>
     
