--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -21,7 +21,7 @@
         <div class="d-flex align-items-center">
           <input
             id="create-field"
-            name="item"
+            name="reja"
             autofocus
             autocomplete="off"
             class="form-control mr-3"
@@ -34,7 +34,24 @@
         </div>
       </form>
     </div>
-    <button class="btn btn-primary" style="border-radius: 20px">Hamma Rejalarni O'chirish</button>
+
+     <ul id="item-list" class="list-group pb-5">
+      <% items.map(function(item) { %> 
+          <li
+        class="list-group-item list-group-item-info d-flex align-items-center justify-content-between"
+        > 
+        <span class="item-text"><%=item.reja%></span> 
+        <div>
+          <button data-id="<%=item._id%>" class="edit-me btn btn-secondary btn-sm mr-1"> 
+          Ozgartirish 
+          </button> 
+          <button data-id="<%=item._id%>" class="delete-me btn btn-danger btn-sm">Ochirish</button> 
+        </div> 
+      </li>
+      <% }) %> 
+    </ul>
+
+    <button  id= "clean-all" class="btn btn-success" style="border-radius: 20px">Hamma Rejalarni O'chirish</button>
      
   </div>
     
