fix: reja delete done

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -54,7 +54,8 @@
     <button  id= "clean-all" class="btn btn-success" style="border-radius: 20px">Hamma Rejalarni O'chirish</button>
      
   </div>
-    <script src="http/unpgk.com/axios/dist/axios.min.js"></script>
-    <script src="/browser.js"></script>
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/browser.js"></script>
+
   </body>
 </html>
